Add heart rate capabilities
