# domain/src/main/kotlin/br/com/arcasoftware/stayfit/domain/HealthDataPointType.kt
@@ -1,0 +1,7 @@
+package br.com.arcasoftware.stayfit.domain
+
+enum class HealthDataPointType {
+    EXERCISE,
+    SLEEP,
+    HEART_RATE
+}
